<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.TaskCreatorActivity">

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/create"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/exit"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/createTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageText"
        app:layout_constraintVertical_bias="1.0"
        app:layout_goneMarginEnd="50dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <EditText
        android:id="@+id/taskrepeatNumber"
        android:layout_width="33dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/x"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <EditText
        android:id="@+id/taskrepeatOffset"
        android:layout_width="33dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/x"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/times"
        android:textColor="@color/textColor"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="48dp"
        android:layout_height="26dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/days"
        android:textColor="@color/textColor"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Switch
        android:id="@+id/repeatSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="97dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:layout_marginTop="7dp"
        android:text="@string/repeat"
        android:textColor="@color/textColor"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="48dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/every"
        android:textColor="@color/textColor"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/errorMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/repeat_value_error"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/repeatOffsetError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <TextView
        android:id="@+id/repeatNumberError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:dropDownWidth="wrap_content"
        android:popupBackground="@color/backgroundColor"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/task"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />


</androidx.constraintlayout.widget.ConstraintLayout>